ghost/mariadb/service-mariadb.yaml
# Source: ghost/charts/mariadb/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: example/mariadb
  name: mariadb
  namespace: example
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|example|mariadb'
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
